feature/upd-docs-corr-notices
